// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order <AfterContent/> render() should display credit memos with links because there is an admin url suffix 1`] = `
<div>
  <div
    class="delimiter"
  >
    <a
      href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/852/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          : 
        </span>
        <span
          class="fieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2018-11-07 05:22
        </div>
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        1
         x 
        T-shirt
      </span>
    </div>
  </div>
  <div
    class="delimiter"
  >
    <a
      href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/854/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          : 
        </span>
        <span
          class="fieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2018-11-07 05:22
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should display credit memos without links because there is no admin url suffix 1`] = `
<div>
  <div
    class="delimiter"
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          : 
        </span>
        <span
          class="fieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2018-11-07 05:22
        </div>
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        1
         x 
        T-shirt
      </span>
    </div>
  </div>
  <div
    class="delimiter"
  >
    <a
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          <i
            class="material-icons"
          >
            redeem
          </i>
           
          Credit memo
          : 
        </span>
        <span
          class="fieldValue"
        >
           
        </span>
      </div>
    </a>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2018-11-07 05:22
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should return null because the order has no shipments nor credit memos 1`] = `<div />`;

exports[`Order <BeforeContent/> render() should display shipments with links because there is an admin url suffix 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
  <div
    class="section"
  >
    <div
      class="linkWrapper"
    >
      <a
        href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/963/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2019-03-04 11:12
        </div>
      </span>
    </div>
    <div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Carrier code
          : 
        </span>
        <span
          class="fieldValue"
        >
          UPS
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking number
          : 
        </span>
        <span
          class="fieldValue"
        >
          123ABC
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking URL
          : 
        </span>
        <span
          class="fieldValue"
        >
          -
        </span>
      </div>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        1
         x 
        Pants
      </span>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="linkWrapper"
    >
      <a
        href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/741/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2019-02-04 11:12
        </div>
      </span>
    </div>
    <div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Carrier code
          : 
        </span>
        <span
          class="fieldValue"
        >
          LaPoste
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking number
          : 
        </span>
        <span
          class="fieldValue"
        >
          789GHJ
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking URL
          : 
        </span>
        <span
          class="fieldValue"
        >
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should display shipments without links because there is no admin url suffix 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
  <div
    class="section"
  >
    <div
      class="linkWrapper"
    >
      <a
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2019-03-04 11:12
        </div>
      </span>
    </div>
    <div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Carrier code
          : 
        </span>
        <span
          class="fieldValue"
        >
          UPS
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking number
          : 
        </span>
        <span
          class="fieldValue"
        >
          123ABC
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking URL
          : 
        </span>
        <span
          class="fieldValue"
        >
          -
        </span>
      </div>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        4
         x 
        Sneakers
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        1
         x 
        Pants
      </span>
    </div>
  </div>
  <div
    class="section"
  >
    <div
      class="linkWrapper"
    >
      <a
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <i
          class="material-icons"
        >
          local_shipping
        </i>
         
        <span>
          Shipment
        </span>
      </a>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldLabel"
      >
        Last updated
        : 
      </span>
      <span
        class="fieldValue"
      >
        <div>
          2019-02-04 11:12
        </div>
      </span>
    </div>
    <div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Carrier code
          : 
        </span>
        <span
          class="fieldValue"
        >
          LaPoste
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking number
          : 
        </span>
        <span
          class="fieldValue"
        >
          789GHJ
        </span>
      </div>
      <div
        class="fieldContainer staticField"
      >
        <span
          class="fieldLabel"
        >
          Tracking URL
          : 
        </span>
        <span
          class="fieldValue"
        >
          -
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render the state and an empty created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div />
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the canceled state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        Canceled
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the closed state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        Closed
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the complete state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        Complete
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the new state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        New
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the on_hold state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        On hold
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the pending state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        Pending
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the processing state and a created at date but no shipments because there are none 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      State
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-name="badge"
        style="border-radius: 100px;"
      >
        Processing
      </div>
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created at
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div>
        "2020-10-07 09:30:03"
      </div>
    </span>
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should not render link because there is no admin url suffix 1`] = `
<div>
  <div>
    foo bar
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should render link 1`] = `
<div>
  <a
    href="https://magento.gorgi.us/admin_12df/sales/order/view/order_id/1/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div>
      foo bar
    </div>
  </a>
   
</div>
`;
